# objforce

./: .gitignore  BUILD.bazel  Dockerfile.build  Makefile  README.txt  TODO.md  WORKSPACE  docker-compose.yaml  go.mod  go.sum
api/data/: Dockerfile  main.go
api/index/: main.go
api/meta/: .gitignore  README.md  main.go
bot/: application.json  go.mod  go.sum  main.go
bot/bootstrap/: app.go
bot/config/: app.go
cmd/bot/: BUILD.bazel
cmd/bot/app/commands/: BUILD.bazel  migrate.command.go
cmd/data-api/: BUILD.bazel  Dockerfile  Makefile  main.go
cmd/data-api/app/domain/services/: BUILD.bazel  data.service.go
cmd/data-api/app/dtos/: BUILD.bazel  sobject.go
cmd/data-api/app/http/controllers/: BUILD.bazel  sobject.controller.go
cmd/data-api/app/http/middlewares/: BUILD.bazel  global.go
cmd/data-api/app/providers/: BUILD.bazel  logger.provider.go  service.client.provider.go
cmd/data-api/bootstrap/: BUILD.bazel  app.go
cmd/data-api/config/: BUILD.bazel
cmd/data-api/routes/: BUILD.bazel  api.go
cmd/data-srv/: BUILD.bazel  Dockerfile  main.go
cmd/data-srv/app/domain/models/: BUILD.bazel  mt_data.go
cmd/data-srv/app/domain/repositories/: BUILD.bazel  data.repository.go
cmd/data-srv/app/domain/services/: BUILD.bazel  data.service.go
cmd/data-srv/app/dtos/: BUILD.bazel
cmd/data-srv/app/handlers/: BUILD.bazel  sobject.handler.go  sobject.handler_test.go
cmd/data-srv/app/providers/: BUILD.bazel  broker.provider.go  handlers.provider.go  logger.provider.go
cmd/data-srv/bootstrap/: BUILD.bazel  app.go
cmd/data-srv/config/: BUILD.bazel
cmd/index-api/: BUILD.bazel  Dockerfile  Makefile  docker-compose.yaml  main.go
cmd/index-api/app/domain/models/: BUILD.bazel
cmd/index-api/app/domain/repositories/: BUILD.bazel  document.repository.go  document.repository_test.go  index.repository.go
cmd/index-api/app/domain/services/: BUILD.bazel  document.service.go  index.service.go
cmd/index-api/app/dtos/: BUILD.bazel
cmd/index-api/app/events/: BUILD.bazel
cmd/index-api/app/http/controllers/: BUILD.bazel  document.controller.go
cmd/index-api/app/http/middlewares/: BUILD.bazel  global.go
cmd/index-api/app/providers/: BUILD.bazel  logger.provider.go
cmd/index-api/bootstrap/: BUILD.bazel  app.go
cmd/index-api/config/: BUILD.bazel  app.go
cmd/index-api/routes/: BUILD.bazel  api.go
cmd/index-srv/: BUILD.bazel  Dockerfile  docker-compose.yaml  main.go
cmd/index-srv/app/domain/models/: BUILD.bazel  index.go
cmd/index-srv/app/domain/repositories/: BUILD.bazel  document.repository.go  document.repository_test.go  index.repository.go  unique_index.repository.go
cmd/index-srv/app/domain/services/: BUILD.bazel  document.service.go  index.service.go
cmd/index-srv/app/dtos/: BUILD.bazel  document.go
cmd/index-srv/app/events/: BUILD.bazel
cmd/index-srv/app/handlers/: BUILD.bazel  document.handler.go  index.handler.go
cmd/index-srv/app/providers/: BUILD.bazel  broker.provider.go  handlers.provider.go  logger.provider.go  service.client.provider.go
cmd/index-srv/bootstrap/: BUILD.bazel  app.go
cmd/index-srv/config/: BUILD.bazel
cmd/meta-api/: BUILD.bazel  Dockerfile  main.go
cmd/meta-api/app/domain/services/: BUILD.bazel  custom_field.service.go  custom_object.service.go
cmd/meta-api/app/dtos/: BUILD.bazel  custom_object.go  filter_item.go  form_factor.go  value_set.go
cmd/meta-api/app/http/controllers/: BUILD.bazel  custom_field.controller.go  metadata.handler.go
cmd/meta-api/app/http/middlewares/: BUILD.bazel  global.go  tenant.middleware.go
cmd/meta-api/app/providers/: logger.provider.go  service.client.provider.go
cmd/meta-api/bootstrap/: BUILD.bazel  app.go
cmd/meta-api/routes/: BUILD.bazel  api.go
cmd/meta-srv/: BUILD.bazel  Dockerfile  docker-compose.yaml  main.go
cmd/meta-srv/app/domain/models/: BUILD.bazel  compact_layout.go  filter_item.go  list_view_filter.go  mt_name_denorm.go  mt_relationship.go  record_type.go
cmd/meta-srv/app/domain/repositories/: BUILD.bazel  custom_object.repository.go  custom_object.repository_test.go
cmd/meta-srv/app/domain/services/: BUILD.bazel  custom_field.service.go  custom_object.service.go
cmd/meta-srv/app/dtos/: BUILD.bazel  custom_value.go  deployment_status.go  platform_event_publish_behavior.go
cmd/meta-srv/app/handlers/: BUILD.bazel  custom_field.handler.go  custom_object.handler.go
cmd/meta-srv/app/providers/: BUILD.bazel  broker.provider.go  handlers.provider.go
cmd/meta-srv/bootstrap/: BUILD.bazel  app.go
cmd/meta-srv/config/: BUILD.bazel  consts.go  rocketmq.go
data-api/: .gitignore  Makefile  application.json  docker-compose.yaml  go.mod  go.sum  main.go
data-api/bootstrap/: app.go
data-server/: .gitignore  go.sum  main.go
data-server/bootstrap/: app.go
data-server/config/: env.go
data-server/routes/: api.go
data-srv/: .gitignore  Makefile  docker-compose.yaml  go.mod  go.sum  main.go
data-srv/bootstrap/: app.go
data-srv/config/: app.go  consts.go
idl/: .gitignore  go.mod  go.sum
idl/data/: BUILD.bazel  data.proto
idl/data/gen-go/: BUILD.bazel  data.pb.go  data.pb.micro.go  data.validator.pb.go
idl/index/: BUILD.bazel
idl/index/gen-go/: BUILD.bazel  index.pb.go  index.pb.micro.go  index.validator.pb.go
idl/meta/: BUILD.bazel  Makefile  meta.proto  types.proto
idl/meta/gen-go/: BUILD.bazel  meta.pb.go  meta.pb.micro.go  meta.validator.pb.go  types.pb.go  types.pb.micro.go  types.validator.pb.go
index-api/routes/: api.go
index-server/: .gitignore  docker-compose.yaml  go.mod  go.sum
index-server/bootstrap/: app.go
index-server/config/: app.go
index-server/routes/: api.go
index-srv/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go
index-srv/bootstrap/: app.go
meta-api/: Dockerfile  Makefile  README.md  docker-compose.yaml  go.mod  go.sum  main.go
meta-server/: .gitignore  Dockerfile  Makefile  TODO.md  docker-compose.yaml  go.mod  go.sum  main.go
meta-srv/: Makefile  README.md  TODO.md  application.json  docker-compose.yaml  go.mod  go.sum  main.go
utils/: Convert.go
web/: package.json
(+460 files in other folders)
