load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bot_lib",
    srcs = ["main.go"],
    importpath = "github.com/objforce/objforce/cmd/bot",
    visibility = ["//visibility:private"],
    deps = ["//cmd/bot/bootstrap"],
)

go_binary(
    name = "bot",
    embed = [":bot_lib"],
    visibility = ["//visibility:public"],
)
