load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "data-api_lib",
    srcs = ["main.go"],
    importpath = "github.com/objforce/objforce/cmd/data-api",
    visibility = ["//visibility:private"],
    deps = ["//cmd/data-api/bootstrap"],
)

go_binary(
    name = "data-api",
    embed = [":data-api_lib"],
    visibility = ["//visibility:public"],
)
