load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "data-srv_lib",
    srcs = ["main.go"],
    importpath = "github.com/objforce/objforce/cmd/data-srv",
    visibility = ["//visibility:private"],
    deps = ["//cmd/data-srv/bootstrap"],
)

go_binary(
    name = "data-srv",
    embed = [":data-srv_lib"],
    visibility = ["//visibility:public"],
)
