load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "index-api_lib",
    srcs = ["main.go"],
    importpath = "github.com/objforce/objforce/cmd/index-api",
    visibility = ["//visibility:private"],
    deps = ["//cmd/index-api/bootstrap"],
)

go_binary(
    name = "index-api",
    embed = [":index-api_lib"],
    visibility = ["//visibility:public"],
)
