load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "index-srv_lib",
    srcs = ["main.go"],
    importpath = "github.com/objforce/objforce/cmd/index-srv",
    visibility = ["//visibility:private"],
    deps = ["@com_github_objforce_objforce_index_srv//bootstrap:go_default_library"],
)

go_binary(
    name = "index-srv",
    embed = [":index-srv_lib"],
    visibility = ["//visibility:public"],
)
