load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "meta-api_lib",
    srcs = ["main.go"],
    importpath = "github.com/objforce/objforce/cmd/meta-api",
    visibility = ["//visibility:private"],
    deps = ["//cmd/meta-api/bootstrap"],
)

go_binary(
    name = "meta-api",
    embed = [":meta-api_lib"],
    visibility = ["//visibility:public"],
)
