load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "data_proto",
    srcs = ["data.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:any_proto"],
)

go_proto_library(
    name = "data_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/objforce/objforce/idl/data",
    proto = ":data_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "data",
    embed = [":data_go_proto"],
    importpath = "github.com/objforce/objforce/idl/data",
    visibility = ["//visibility:public"],
)
