load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "meta_proto",
    srcs = [
        "meta.proto",
        "types.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["//:root_proto"],
)

go_proto_library(
    name = "meta_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/objforce/objforce/idl/meta",
    proto = ":meta_proto",
    visibility = ["//visibility:public"],
    deps = ["//:types.proto"],
)

go_library(
    name = "meta",
    embed = [":meta_go_proto"],
    importpath = "github.com/objforce/objforce/idl/meta",
    visibility = ["//visibility:public"],
)
