load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bootstrap",
    srcs = ["app.go"],
    importpath = "github.com/objforce/objforce/cmd/data-api/bootstrap",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/data-api/app/domain/services",
        "//cmd/data-api/app/http/controllers",
        "//cmd/data-api/app/http/middlewares",
        "//cmd/data-api/app/providers",
        "//cmd/data-api/config",
        "//cmd/data-api/routes",
        "@com_github_xxxmicro_base//config:go_default_library",
        "@com_github_xxxmicro_base//config/source:go_default_library",
        "@com_github_xxxmicro_base//database/gorm:go_default_library",
        "@com_github_xxxmicro_base//opentracing/jaeger:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)
