load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = [
        "app.go",
        "consts.go",
        "env.go",
        "rocketmq.go",
    ],
    importpath = "github.com/objforce/objforce/cmd/data-srv/config",
    visibility = ["//visibility:public"],
)
