load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bootstrap",
    srcs = ["app.go"],
    importpath = "github.com/objforce/objforce/cmd/index-api/bootstrap",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/index-api/app/domain/repositories",
        "//cmd/index-api/app/domain/services",
        "//cmd/index-api/app/events",
        "//cmd/index-api/app/http/controllers",
        "//cmd/index-api/app/http/middlewares",
        "//cmd/index-api/app/providers",
        "//cmd/index-api/config",
        "//cmd/index-api/routes",
        "@com_github_xxxmicro_base//config:go_default_library",
        "@com_github_xxxmicro_base//config/source:go_default_library",
        "@com_github_xxxmicro_base//database/gorm:go_default_library",
        "@com_github_xxxmicro_base//opentracing/jaeger:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)
