load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "routes",
    srcs = ["api.go"],
    importpath = "github.com/objforce/objforce/cmd/index-api/routes",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/index-api/app/http/controllers",
        "//cmd/index-api/app/http/middlewares",
        "//cmd/index-api/config",
        "@com_github_cnjack_throttle//:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@org_uber_go_dig//:go_default_library",
    ],
)
