load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bootstrap",
    srcs = ["app.go"],
    importpath = "github.com/objforce/objforce/cmd/meta-api/bootstrap",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/meta-api/app/domain/services",
        "//cmd/meta-api/app/http/controllers",
        "//cmd/meta-api/app/http/middlewares",
        "//cmd/meta-api/app/providers",
        "//cmd/meta-api/config",
        "//cmd/meta-api/routes",
        "@com_github_xxxmicro_base//config:go_default_library",
        "@com_github_xxxmicro_base//config/source:go_default_library",
        "@com_github_xxxmicro_base//opentracing/jaeger:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)
