load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bootstrap",
    srcs = ["app.go"],
    importpath = "github.com/objforce/objforce/cmd/meta-srv/bootstrap",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/meta-srv/app/domain/repositories",
        "//cmd/meta-srv/app/domain/services",
        "//cmd/meta-srv/app/handlers",
        "//cmd/meta-srv/app/providers",
        "//cmd/meta-srv/config",
        "@com_github_xxxmicro_base//config:go_default_library",
        "@com_github_xxxmicro_base//config/source:go_default_library",
        "@com_github_xxxmicro_base//database/gorm:go_default_library",
        "@com_github_xxxmicro_base//opentracing/jaeger:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)
