load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gen-go",
    srcs = [
        "data.pb.go",
        "data.pb.micro.go",
        "data.validator.pb.go",
    ],
    importpath = "github.com/objforce/objforce/idl/data/gen-go",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_micro_go_micro_v2//api:go_default_library",
        "@com_github_micro_go_micro_v2//client:go_default_library",
        "@com_github_micro_go_micro_v2//server:go_default_library",
        "@com_github_mwitkow_go_proto_validators//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:any_go_proto",
    ],
)
