load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "providers",
    srcs = [
        "gin.provider.go",
        "logger.provider.go",
        "micro.client.provider.go",
        "micro.web.service.provider.go",
        "service.client.provider.go",
    ],
    importpath = "github.com/objforce/objforce/cmd/data-api/app/providers",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/data-api/config",
        "//idl/data/gen-go",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_micro_cli_v2//:go_default_library",
        "@com_github_micro_go_micro_v2//client:go_default_library",
        "@com_github_micro_go_micro_v2//client/grpc:go_default_library",
        "@com_github_micro_go_micro_v2//client/selector:go_default_library",
        "@com_github_micro_go_micro_v2//logger:go_default_library",
        "@com_github_micro_go_micro_v2//util/wrapper:go_default_library",
        "@com_github_micro_go_micro_v2//web:go_default_library",
        "@com_github_micro_go_plugins_registry_consul_v2//:go_default_library",
        "@com_github_micro_go_plugins_wrapper_breaker_hystrix_v2//:go_default_library",
        "@com_github_micro_go_plugins_wrapper_trace_opentracing_v2//:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
        "@org_uber_go_zap//zapcore:go_default_library",
    ],
)
