load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "providers",
    srcs = [
        "broker.provider.go",
        "handlers.provider.go",
        "hbase.client.provider.go",
        "logger.provider.go",
        "micro.client.provider.go",
        "micro.service.provider.go",
        "service.client.provider.go",
    ],
    importpath = "github.com/objforce/objforce/cmd/data-srv/app/providers",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/data-srv/app/handlers",
        "//cmd/data-srv/config",
        "//idl/data/gen-go",
        "//idl/meta/gen-go",
        "@com_github_micro_cli_v2//:go_default_library",
        "@com_github_micro_go_micro_v2//:go_default_library",
        "@com_github_micro_go_micro_v2//broker:go_default_library",
        "@com_github_micro_go_micro_v2//client:go_default_library",
        "@com_github_micro_go_micro_v2//config:go_default_library",
        "@com_github_micro_go_micro_v2//logger:go_default_library",
        "@com_github_micro_go_plugins_logger_zap_v2//:go_default_library",
        "@com_github_micro_go_plugins_registry_consul_v2//:go_default_library",
        "@com_github_micro_go_plugins_wrapper_monitoring_prometheus_v2//:go_default_library",
        "@com_github_micro_go_plugins_wrapper_ratelimiter_uber_v2//:go_default_library",
        "@com_github_micro_go_plugins_wrapper_trace_opentracing_v2//:go_default_library",
        "@com_github_micro_go_plugins_wrapper_validator_v2//:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@com_github_tsuna_gohbase//:go_default_library",
        "@com_github_xxxmicro_base//opentracing:go_default_library",
        "@com_github_xxxmicro_go_plugins_broker_rocketmq_v2//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)
