load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "events",
    srcs = ["sobject.subscriber.go"],
    importpath = "github.com/objforce/objforce/cmd/index-api/app/events",
    visibility = ["//visibility:public"],
    deps = ["@com_github_micro_go_micro_v2//broker:go_default_library"],
)
