load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "events",
    srcs = ["sobject.subscriber.go"],
    importpath = "github.com/objforce/objforce/cmd/index-srv/app/events",
    visibility = ["//visibility:public"],
    deps = [
        "//idl/data/gen-go",
        "@com_github_micro_go_micro_v2//:go_default_library",
        "@com_github_micro_go_micro_v2//logger:go_default_library",
        "@com_github_micro_go_micro_v2//server:go_default_library",
    ],
)
