load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "dtos",
    srcs = [
        "action_override.go",
        "action_override_type.go",
        "business_process.go",
        "compact_layout.go",
        "custom_field.go",
        "custom_object.go",
        "custom_settings_type.go",
        "custom_settings_visibility.go",
        "custom_value.go",
        "delete_constraint.go",
        "deployment_status.go",
        "encryption_schema.go",
        "field_set.go",
        "field_type.go",
        "filter_item.go",
        "filter_operation.go",
        "filter_scope.go",
        "forecast_categories.go",
        "form_factor.go",
        "gender.go",
        "history_retention_policy.go",
        "index.go",
        "language.go",
        "list_view.go",
        "list_view_filter.go",
        "metadata.go",
        "named_filter.go",
        "picklist_value.go",
        "platform_event_publish_behavior.go",
        "platform_event_type.go",
        "profile_search_layouts.go",
        "record_type.go",
        "search_layouts.go",
        "security_classification.go",
        "setup_object_visibility.go",
        "share_to.go",
        "sharing_model.go",
        "sharing_reason.go",
        "sharing_recalculation.go",
        "starts_with.go",
        "summary_operations.go",
        "treat_blanks_as.go",
        "validation_rule.go",
        "value_set.go",
        "value_set_values_definition.go",
        "value_settings.go",
        "web_link.go",
    ],
    importpath = "github.com/objforce/objforce/cmd/meta-srv/app/dtos",
    visibility = ["//visibility:public"],
)
